--- a/src/components/pages/signup/Signup.css
+++ b/src/components/pages/signup/Signup.css
@@ -1,16 +1,45 @@
-.signin {
+.signup {
     text-align: center;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 form {
     border-color: black;
     border-radius: 10px;
     border-style: solid;
-    width: fit-content;
     padding: 20px;
     background-color: white;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
+    align-items: start;
+    display: inline-block;
+    margin: 20px;
+}
+
+label {
+    display: flex;
+    font-size: large;
+    font-weight: bold;
+}
+
+input {
+    width: 20rem;
+    height:fit-content;
+    border-radius: 5px;
+    margin: 10px 0px 10px 0px;
+    padding: 10px;
+}
+
+button {
+    border-radius: 10px;
+    font-size: large;
+    color: white;
+    background-color: black;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.signup p {
+    font-weight: bold;
 }
