--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -4,13 +4,7 @@
     padding: 0px;
     display: flex;
 }
-.homeleft {
-    width: 20%;
-    background-color: white;
-    border-radius: 10px;
-    padding: 20px;
-    margin: 10px;
-}
+
 
 .homeright {
     background-color: white;
@@ -19,3 +13,14 @@
     margin: 10px;
     width: 100%;
 }
+
+.homeleft {
+    width: 20%;
+    background-color: white;
+    border-radius: 10px;
+    margin: 10px;
+    text-align: center;
+    height: 100vh;
+    padding: 0px;
+}
+
