--- a/src/components/pages/sentmail/Sentmaildata.css
+++ b/src/components/pages/sentmail/Sentmaildata.css
@@ -3,21 +3,21 @@
   background-color: rgb(228, 224, 224);
   margin: 10px;
   padding: 10px;
-  width: fit-content;
+  /* width: fit-content; */
   border-radius: 10px;
   font-weight: bold;
   justify-content: space-between;
 }
 
-.email {
+.sentmails.email {
   margin: 10px;
-  width: 10rem;
+  width: 5rem;
   display: -webkit-box;
   -webkit-line-clamp: 1; /* number of lines to show */
   -webkit-box-orient: vertical;
 }
 
-.describtion {
+.sentmails .describtion {
   width: 60rem;
   margin: 10px;
   overflow: hidden;
