--- a/src/components/pages/composemail/Composemail.css
+++ b/src/components/pages/composemail/Composemail.css
@@ -1,35 +1,92 @@
-.composemail{
-    background-color: white;
-    margin: 20px;
-    padding: 20px;
-    text-align: center;
-}
-
-.editor {
-    width:100%;
+.composemail {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+    padding: 5px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(219, 218, 218);
+  }
+  
+  h2{
+    text-align: center!important;
+  }
+  .editor {
+    width: 100%;
     border-radius: 10px;
     margin: 10px 0px 10px 0px;
     padding: 10px;
-    border-style:solid;
+    border-style: solid;
     border-width: thin;
-}
-
-.composemail form {
+  }
+  
+  .composemail form {
     width: 80%;
     text-align: start;
-}
-
-.composemail form button {
-    width: 20%;
+  }
+  
+  .composemail form button {
+    width: 100%;
     background-color: black;
     color: white;
-}
-
-.composemail input{
+    margin-top: 10px;
+  }
+  
+  .composemail input {
     font-size: larger;
-}
+  }
+  
+  .composemail textarea {
+    font-size: x-large;
+  }
+  
+  @media (max-width: 768px) {
 
-.composemail textarea{
-    font-size:x-large
-}
+    .rdw-editor-toolbar {
+        visibility: hidden;
+        display: none!important;
+    }
 
+    .composemail {
+        background-color: white;
+        /* margin: 20px; */
+        /* padding: 20px; */
+        text-align: center;
+      }
+      .composemail {
+        text-align: center;
+      }
+      
+      .editor {
+        /* width: 100%; */
+        border-radius: 10px;
+        /* margin: 10px 0px 10px 0px; */
+        /* padding: 10px; */
+        border-style: solid;
+        border-width: thin;
+      }
+      
+      .composemail form {
+        /* width: 100%; */
+        margin: 0px;
+        text-align: start;
+      }
+      
+      .composemail form button {
+        /* width: 100%; */
+        background-color: black;
+        color: white;
+        /* margin-top: 10px; */
+      }
+      
+      .composemail input {
+        font-size: smaller;
+        width: 80%;
+      }
+      
+      .composemail textarea {
+        font-size: smaller;
+      }
+  }
+  
